Исправлено бургер-меню (сверху). Была проблема при выезде слева

--- a/#source/style.scss
+++ b/#source/style.scss
@@ -1060,11 +1060,11 @@ body.lock {
             position: absolute;
             display: block;
             z-index: 199;
-            right: -100%;
-            top: 0;
+            right: 0;
+            top: -100%;
             padding: 50px 15px 15px 35px;
             height: 100vh;
-            width: 50%;
+            width: 100vw;
             background-color: #86adef;
             overflow: auto;
             transition: all .5s ease;
@@ -1076,7 +1076,7 @@ body.lock {
         &__burger-list {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
             text-transform: uppercase;
             font-family: "Gilroy Medium";
             font-weight: 400;
@@ -1446,9 +1446,6 @@ body.lock {
         &__address {
             display: none;
         }
-        &__burger-menu {
-            width: 70vw;
-        }
     }
     .certification {
         margin-top: 25px;
@@ -1707,9 +1704,6 @@ body.lock {
     .header {
         &__logo {
             font-size: 30px;
-        }
-        &__burger-menu {
-            width: 100vw;
         }
     }
     .logo {
