--- a/css/style.css
+++ b/css/style.css
@@ -992,14 +992,14 @@ body.lock {
     position: absolute;
     display: block;
     z-index: 199;
-    right: 0;
-    top: -150%;
+    right: -100%;
+    top: 0;
     padding: 50px 15px 15px 35px;
     height: 100vh;
-    width: 100vw;
+    width: 50%;
     background-color: #86adef;
     overflow: auto;
-    transition: all 0.7s ease;
+    transition: all 0.5s ease;
   }
   .header__burger-menu.active {
     right: 0;
@@ -1008,7 +1008,7 @@ body.lock {
   .header__burger-list {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     text-transform: uppercase;
     font-family: "Gilroy Medium";
     font-weight: 400;
@@ -1352,6 +1352,9 @@ body.lock {
   .header__address {
     display: none;
   }
+  .header__burger-menu {
+    width: 70vw;
+  }
 
   .certification {
     margin-top: 25px;
@@ -1603,6 +1606,9 @@ body.lock {
 @media (max-width: 460px) {
   .header__logo {
     font-size: 30px;
+  }
+  .header__burger-menu {
+    width: 100vw;
   }
 
   .logo__title {
