Исправление ошибок после валидации кода

--- a/#source/style.scss
+++ b/#source/style.scss
@@ -895,6 +895,7 @@ body.lock {
         margin-left: 31px;
     }
     &__title {
+        display: block;
         margin-bottom: 27px;
         font-family: "Gilroy Bold";
         font-weight: 700;
